2014-02-27
==========
* Adding a simple class for version numbering.

2013-11-08
==========
* Adding support for one-line installer (suppressing output and don't die too hard).